# django-5-by-example

./: README.md
myblog/: pyproject.toml
myblog/blog/: models.py  urls.py  views.py
myblog/blog/migrations/: 0001_initial.py  0002_alter_post_slug.py  0003_comment.py  0004_post_tags.py
myblog/blog/templates/blog/: base.html
myblog/blog/templates/blog/post/: comment.html  detail.html  list.html  search.html  share.html
myblog/blog/templates/blog/post/includes/: comment_form.html
myblog/blog/templatetags/: blog_tags.py
myblog/myblog/: settings.py  urls.py
