[project]
name = "myblog"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13.1"
dependencies = [
    "django-taggit>=6.1.0",
    "django>=5.1.4",
    "python-decouple==3.8",
    "markdown==3.6",
    "psycopg==3.1.18",
    "psycopg2-binary>=2.9.10",
]
